# aware

./: README.md  docker-compose.yaml
.github/workflows/: codeql-analysis.yml  docker-api-publish.yaml  docker-web-publish.yaml  shai.yaml
api/: Dockerfile  app.py  config.py  pyproject.toml  requirements.txt  utils.py
api/loggers/: loki.py
api/monitors/: prometheus.py
proxy/: dev.nginx
web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.mjs
web/public/: index.html
web/src/: App.jsx  App.test.jsx  EventContainer.jsx  style.css
