[tool.poetry]
name = "Aware-API"
version = "0.1.0"
description = "Flask-API for Aware, the highly visual alerting dashboard"
authors = ["Stig Ofstad <stigofstad@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
flask = ">=3.0,<4.0"
requests = ">=2.32,<3.0"
urllib3 = ">=2.2,<3.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
